// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stil MI_KA 1`] = `
Object {
  "filter": Array [
    "has",
    "MI_KA",
  ],
  "id": "MI_KA",
  "interactive": true,
  "paint": Object {
    "fill-color": "#FFFF00",
    "fill-outline-color": "#FF0000",
  },
  "source": "MI",
  "source-layer": "MI",
  "type": "fill",
}
`;

exports[`stil NA 1`] = `
Object {
  "filter": Array [
    "has",
    "NA_T",
  ],
  "id": "NA_T",
  "interactive": true,
  "paint": Object {
    "fill-color": "#FFFF00",
    "fill-outline-color": "#FF0000",
  },
  "source": "NA",
  "source-layer": "NA",
  "type": "fill",
}
`;

exports[`stil RASTER 1`] = `
Object {
  "id": "BS_6SO-RASTER",
  "source": "BS_6SO-RASTER",
  "type": "raster",
}
`;
